--- a/app/src/main/res/layout/single_card.xml
+++ b/app/src/main/res/layout/single_card.xml
@@ -3,7 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginBottom="8dp">
+    android:layout_marginBottom="8dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:id="@+id/cv_holder">
 
     <RelativeLayout
         android:padding="16dp"
